# MinimalGameEngine

./: .gitignore  README.md  project_manager.py
Game/: CMakeLists.txt
Game/include/: ExampleGame.hpp
Game/resource/3dModels/: cube.m3d
Game/src/: ExampleGame.cpp  main.cpp
MinimalGameEngine/: CMakeLists.txt
MinimalGameEngine/include/Game/: iGame.hpp
MinimalGameEngine/include/GameEngine/: D3Entity.hpp  D3SceneNode.hpp  GameEngine.hpp  GameEntity.hpp  SceneNode.hpp  iCoreGameLoop.hpp  iGameInitializer.hpp  iGameLoop.hpp  iWindowHandler.hpp
MinimalGameEngine/include/GameEngine/D3Model/: D3Model.hpp  D3ModelManager.hpp
MinimalGameEngine/include/GameEngine/DataType/: BufferType.hpp  ResourceDataType.hpp  ResourceLoader.hpp  ResourceManager.hpp
MinimalGameEngine/include/Input/: GLFWInputManager.hpp  KeyboardDefs.hpp  iInputManager.hpp
MinimalGameEngine/include/Renderer/: OpenGLRenderer.hpp  Renderer.hpp  iRenderer.hpp
MinimalGameEngine/include/System/: System.hpp  SystemConfig.hpp
MinimalGameEngine/include/WindowManager/: DummyWindowManager.hpp  OpenGLWindowManager.hpp  WindowManager.hpp  iInputEventSetup.hpp  iWindowController.hpp  iWindowEventSetup.hpp  iWindowManager.hpp
MinimalGameEngine/src/GameEngine/: GameEngine.cpp
MinimalGameEngine/src/Input/: GLFWInputManager.cpp
MinimalGameEngine/src/Renderer/: OpenGLRenderer.cpp
MinimalGameEngine/src/System/: System.cpp
MinimalGameEngine/src/WindowManager/: DummyWindowManager.cpp  OpenGLWindowManager.cpp
MinimalGameEngine/src/input/: GLFWInputManager.cpp
PythonTools/BlenderConverter/: BlenderConverter.py
PythonTools/M3d/: CubeGenerator.py  pyramid.m3d  pyramidGenerator.py
common/GLAD/src/: glad.c
common/OpenFBX/src/: Readme.txt
docs/: TodoList.txt
docs/file_formats/: m3d_1_0.txt
project_manager_modules/: process.py
(+8 files in other folders)
